--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,8 @@ website:
     left:
       - href: index.qmd
         text: Programa
-      # - href: Practica0.qmd
-      #   text: Práctica 0
+      - href: Practica0.qmd
+        text: Práctica 0
       # - href: Practica1.qmd
       #   text: Práctica 1
       # - href: Practica2.qmd
