--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,8 +12,8 @@ website:
         text: Práctica 0
       - href: Practica1.qmd
         text: Práctica 1
-      # - href: Practica2.qmd
-      #   text: Práctica 2
+      - href: Practica2.qmd
+        text: Práctica 2
       # - href: Practica3.qmd
       #   text: Práctica 3
       # - href: Practica4.qmd
