--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,8 +14,8 @@ website:
         text: Práctica 1
       - href: Practica2.qmd
         text: Práctica 2
-      # - href: Practica3.qmd
-      #   text: Práctica 3
+      - href: Practica3.qmd
+        text: Práctica 3
       # - href: Practica4.qmd
       #   text: Práctica 4
       # - href: Practica5.qmd
