--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,8 +20,8 @@ website:
         text: Práctica 4
       - href: Practica5.qmd
         text: Práctica 5
-      # - href: Practica6.qmd
-      #   text: Práctica 6
+      - href: Practica6.qmd
+        text: Práctica 6
       # - href: Practica7.qmd
       #   text: Práctica 7 
       # - href: PracticaRepaso.qmd
